refactor: Remove 'public' modifier from bean methods in configuration classes for consistency